removed z-index bug

--- a/iwd-app/src/components/hero-banner/hero.css
+++ b/iwd-app/src/components/hero-banner/hero.css
@@ -204,7 +204,6 @@
     width: auto;
     height: 15vh;
     right: 0;
-    z-index: -1;
   }
 
 }
